--- a/test.html
+++ b/test.html
@@ -53,29 +53,67 @@ $.fn.extend({
             }
         });
 	},
-    httpUtil_POST:function(url,successCallback){//此时的选择器是你数据块所在的上层div的class或id
+    /**
+     * 表单post请求
+     * data 自动序列化
+     * @param url 请求地址
+     * @param successCallback 请求成功的回调函数
+     */
+    httpUtil_Post:function(url,successCallback){//此时的选择器是你数据块所在的上层div的class或id
+        $.httpUtil_POST(url,$(this).serializeForm(),successCallback);
+    },
+    /**
+     * 表单get请求
+     * data 自动序列化
+     * @param url 请求地址
+     * @param successCallback 请求成功的回调函数
+     */
+    httpUtil_Get:function(url,successCallback){//此时的选择器是你数据块所在的上层div的class或id
+        $.httpUtil_GET(url,$(this).serializeForm(),successCallback);
+    }
+});
+
+/**
+ * jquery的全局方法
+ */
+$.extend({
+    /**
+     * ajax Post
+     * @param url 请求地址
+     * @param data 参数
+     * @param successCallback 请求成功的回调函数
+     */
+    httpUtil_POST:function(url,data,successCallback){
+        var condition = (arguments.length == 2 && arguments[1] instanceof Function);
         $.ajax({
             url: url,
             type: "post",
             dataType: "json",
-            data: $(this).serializeForm()
+            data: !condition ? arguments[1] : (arguments.length == 3 ? arguments[1] : {})
         }).then(
-            successCallback,//success function
+            condition ? arguments[1] : (arguments.length == 3 ? arguments[2] : function(){}),//success function
             function(response){//fail function
-                console.log("message",response.status+"<br/>"+response.statusText+"!");
+                window.message("message",response.status+"<br/>"+response.statusText+"!");
             }
         );
     },
-    httpUtil_GET:function(url,successCallback){//此时的选择器是你数据块所在的上层div的class或id
+    /**
+     * ajax Get
+     * @param url 请求地址
+     * @param data 参数
+     * @param successCallback 请求成功的回调函数
+     */
+    httpUtil_GET:function(url,data,successCallback){//此时的选择器是你数据块所在的上层div的class或id
+        var condition = (arguments.length == 2 && arguments[1] instanceof Function);
         $.ajax({
             url: url,
-            type: "get",
+            type: "post",
             dataType: "json",
-            data: $(this).serializeForm()
+            data: !condition ? arguments[1] : (arguments.length == 3 ? arguments[1] : {})
         }).then(
-            successCallback,//success function
+            condition ? arguments[1] : (arguments.length == 3 ? arguments[2] : function(){}),//success function
             function(response){//fail function
-                console.log("message",response.status+"<br/>"+response.statusText+"!");
+                window.message("message",response.status+"<br/>"+response.statusText+"!");
             }
         );
     }
