--- a/test.html
+++ b/test.html
@@ -107,7 +107,7 @@ $.extend({
         var condition = (arguments.length == 2 && arguments[1] instanceof Function);
         $.ajax({
             url: url,
-            type: "post",
+            type: "get",
             dataType: "json",
             data: !condition ? arguments[1] : (arguments.length == 3 ? arguments[1] : {})
         }).then(
